src/main/java/com/example/armaria/errors/ItemEstoqueNaoDisponivelException.java
package com.example.armaria.errors;

public class ItemEstoqueNaoDisponivelException extends RuntimeException {
  public ItemEstoqueNaoDisponivelException(String message) {
    super(message);
  }

}
